# slate

./: Cargo.toml  README.md  run.sh
assets/: icon.icns
scripts/: generate_test_data.sql
src/: main.rs  workspace.rs
src/ai/: mod.rs  provider.rs  sidebar.rs
src/connection/: dialog.rs  mod.rs  store.rs
src/db/: connection.rs  mod.rs  schema.rs  types.rs
src/editor/: completion.rs  mod.rs  query_editor.rs  saved_queries.rs
src/grid/: results_grid.rs
src/schema/: explorer.rs
